# password-manager

./: LICENSE  MANIFEST.in  MaNelly.spec  README.md  VaultApp.spec  build_dist.sh  build_executable.sh  ci_tests.py  generate-pdf.sh  install.bat  install.py  main.py  pyproject.toml  requirements.txt  setup.py  validate_install.py  vault.db-shm  vault.db-wal
.github/workflows/: ci.yml  release.yml  tests.yml
core/: generator.py  vault.py
crypto/: aead.py  key_derivation.py  keyring.py
docs/deliverables/: cahier-recette.md  index-livrables.md
docs/technical/: configuration.md
docs/tests/: rapport-tests.md
docs/user-guide/: guide-utilisateur.md
storage/: repository.py  schema.py
tests/: test_crypto.py  test_generator.py  test_storage.py  test_vault.py
ui/: app_qt.py  cli.py  vault.db-shm  vault.db-wal
