[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "password-manager"
version = "0.1.0"
dependencies = [
    "cryptography",
    "argon2-cffi",
    "pydantic",
    "sqlite-utils",
    "click",
    "rich",
    "PySide6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "mypy",
    "ruff",
    "pyinstaller",
]

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "crypto",
    "storage",
    "ui",
]
